--- a/css/style.scss
+++ b/css/style.scss
@@ -62,19 +62,20 @@ body {
 }
 
 .page-cont {
-    min-height: 100vh;
+    min-height: -webkit-fill-available;
+    min-height: var(--app-height);
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     padding: 25px 50px;
     max-width: 100%;
     .left-side {
-        min-height: calc(100vh - 50px);
+        min-height: calc(var(--app-height) - 50px);
         width: 160px;
         position: relative;
         .main-panel {
             position: fixed;
-            min-height: calc(100vh - 50px);
+            min-height: calc(var(--app-height) - 50px);
             width: 160px;
             background: #212121;
             box-shadow: 10px 10px 30px 5px rgba(0, 0, 0, 0.15);
@@ -388,7 +389,7 @@ body {
         }
     }
     .right-side {
-        height: calc(100vh - 50px);
+        height: calc(var(--app-height) - 50px);
         width: calc(100% - 160px);
         .top-panel {
             padding-top: 20px;
@@ -1256,12 +1257,17 @@ body {
     width: 100%;
     overflow: hidden;
 }
+:root {
+    --app-height: 100%;
+}
 .content-wrap {
     padding-top: 20px;
-    margin-top: 100px;
+    padding-top: 100px;
     padding-left: 60px;
     padding-right: 60px;
-    min-height: calc(100vh - 100px);
+    height: -webkit-fill-available;
+    min-height: -webkit-fill-available;
+    height: var(--app-height);
     .btn-default {
         background: $gradient;
         border-radius: 25px;
@@ -1279,10 +1285,9 @@ body {
         text-decoration: none;
     }
     &.survey-page {
-        padding-top: 1px;
         .pool-wrap {
             margin-top: 0px;
-            height: calc(100vh - 200px);
+            height: calc(var(--app-height) - 200px);
         }
         .question-list {
             padding-bottom: 80px;
@@ -1312,6 +1317,7 @@ body {
                 height: 150px;
                 background: transparent;
                 overflow: hidden;
+                pointer-events: none;
             }
             .proggres {
                 width: 100%;
@@ -1324,12 +1330,27 @@ body {
             }
         }
         .survey-footer {
-            padding-top: 45px;
+            padding-top: 35px;
             padding-bottom: 45px;
+            position: relative;
+            z-index: 100;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
             .logo {
                 width: 200px;
                 img {
                     max-width: 100%;
+                }
+            }
+            .logo-company {
+                max-width: 200px;
+                align-self: flex-end;
+                img {
+                    max-height: 40px;
+                    max-width: 100%;
+                    object-fit: contain;
+                    object-position: center;
                 }
             }
         }
@@ -2181,7 +2202,17 @@ body {
     max-width: 1075px;
     margin: auto;
     margin-top: 20px;
-    height: calc(100vh - 240px);
+    height: calc(var(--app-height) - 240px);
+    .pool-bg {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
     .option-comment {
         padding-top: 35px;
         textarea {
@@ -2311,6 +2342,13 @@ body {
             line-height: 22px;
             color: #000000;
             padding-bottom: 40px;
+            max-width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
         }
         .radio-btns-wrapper {
             display: flex;
@@ -2400,7 +2438,7 @@ body {
                 font-family: $fontPage;
                 font-style: normal;
                 font-weight: normal;
-                font-size: 9px;
+                font-size: 11px;
                 line-height: 10px;
                 text-align: center;
                 color: #000000;
@@ -3106,7 +3144,7 @@ body {
                     position: absolute;
                     width: 60px;
                     height: 60px;
-                    background: #7FA1F8;
+                    background: linear-gradient(90deg, #B279F7, #7FA1F8) 0% center / 1000%;
                     border-radius: 50%;
                     top: 0px;
                     left: 0px;
@@ -3173,7 +3211,7 @@ body {
                         right: 0px;
                         width: 0%;
                         height: 5px;
-                        background: #7FA1F8;
+                        background: linear-gradient(90deg, #B279F7, #7FA1F8) 0% 0% / 100%;
                         z-index: 2;
                         transition: width 0.1s ease-in;
                         background-repeat: no-repeat;
@@ -3619,10 +3657,10 @@ $color-stack:
     .page-cont {
         padding: 0px;
         .left-side {
-            min-height: 100vh;
+            min-height: var(--app-height);
             width: 120px;
             .main-panel {
-                height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+                height: var(--app-height); /* Fallback for browsers that do not support Custom Properties */
                 height: calc(var(--vh, 1vh) * 100);
                 height: -webkit-fill-available;
                 min-height: initial;
@@ -3653,7 +3691,7 @@ $color-stack:
             }
         }
         .right-side {
-            height: 100vh;
+            height: var(--app-height);
             width: calc(100% - 120px);
            
             .top-panel {
@@ -3696,15 +3734,14 @@ $color-stack:
         }
     }
     .content-wrap {
-        margin-top: 70px;
-        min-height: calc(100vh - 70px);
+        padding-top: 70px;
         &.survey-page {
             .survey-footer {
                 padding-top: 25px;
                 padding-bottom: 25px;
             }
             .pool-wrap {
-                height: calc(100vh - 150px);
+                height: calc(var(--app-height) - 150px);
             }
         }
     }
@@ -3774,8 +3811,7 @@ $color-stack:
         }
     }
     .content-wrap {
-        margin-top: 50px;
-        min-height: calc(100vh - 50px);
+        padding-top: 50px;
         &.survey-page {
             .survey-name {
                 font-size: 24px;
@@ -3805,10 +3841,16 @@ $color-stack:
                 .logo {
                     width: 150px;
                 }
+                .logo-company {
+                    width: 100px;
+                    img {
+                        max-height: 20px;
+                    }
+                }
             }
             .pool-wrap {
                 margin-top: 0px;
-                height: calc(100vh - 100px);
+                height: calc(var(--app-height) - 100px);
                 .question-wrap {
                     padding-top: 20px;
                     padding-bottom: 20px;
@@ -4050,6 +4092,10 @@ $color-stack:
     }
 }
 @media screen and (max-width: 500px) {
+    .content-wrap {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
     .page-cont .right-side {
         .top-menu ul li {
             padding-right: 10px;
@@ -4132,6 +4178,96 @@ $color-stack:
                             }
                         }
                     }
+                }
+            }
+        }
+    }
+    .pool-wrap {
+        .question-wrap {
+            .scale-10 {
+                & > div,
+                & > label {
+                    width: calc(10% - 3px);
+                    max-width: calc(10% - 3px);
+                }
+            }
+            .scale-9 {
+                & > div,
+                & > label {
+                    width: calc(11% - 3px);
+                    max-width: calc(11% - 3px);
+                }
+            }
+            .scale-8 {
+                & > div,
+                & > label {
+                    width: calc(12.5% - 3px);
+                    max-width: calc(12.5% - 3px);
+                }
+            }
+            .scale-7 {
+                & > div,
+                & > label {
+                    width: calc(14% - 3px);
+                    max-width: calc(14% - 3px);
+                }
+            }
+            .scale-6 {
+                & > div,
+                & > label {
+                    width: calc(16.5% - 3px);
+                    max-width: calc(16.5% - 3px);
+                }
+            }
+            .scale-5 {
+                & > div,
+                & > label {
+                    width: calc(20% - 3px);
+                    max-width: calc(20% - 3px);
+                }
+            }
+            .scale-4 {
+                & > div,
+                & > label {
+                    width: calc(25% - 3px);
+                    max-width: calc(25% - 3px);
+                }
+            }
+            .scale-labels-wrap {
+                .label-item {
+                    font-size: 10px;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 425px) {
+    .content-wrap.survey-page .pool-wrap .question-list .question-wrap,
+    .content-wrap.survey-page .survey-descr, 
+    .content-wrap.survey-page .survey-name {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .pool-wrap {
+        .question-wrap {
+            .scale-labels-wrap {
+                .label-item {
+                    font-size: 9px;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 375px) {
+    .content-wrap.survey-page .pool-wrap .question-list {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .pool-wrap {
+        .question-wrap {
+            .scale-labels-wrap {
+                .label-item {
+                    font-size: 8px;
                 }
             }
         }
