--- a/css/style.css
+++ b/css/style.css
@@ -4570,6 +4570,103 @@ body {
   pointer-events: none;
 }
 
+.pool-wrap .matrix-table {
+  width: 100%;
+  max-width: 100%;
+  overflow: auto;
+}
+
+.pool-wrap .matrix-table table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+.pool-wrap .matrix-table td {
+  font-family: "Gilroy", Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 15px;
+  text-align: center;
+  color: #000000;
+  padding: 20px 10px;
+}
+
+.pool-wrap .matrix-table td:first-child {
+  text-align: left;
+}
+
+.pool-wrap .matrix-table td .matrix-check {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.pool-wrap .matrix-table td .matrix-check label {
+  width: 30px;
+  height: 20px;
+  position: relative;
+}
+
+.pool-wrap .matrix-table td .matrix-check label::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  background: -webkit-gradient(linear, left top, right top, from(#B279F7), to(#7FA1F8));
+  background: -webkit-linear-gradient(left, #B279F7 0%, #7FA1F8 100%);
+  background: -o-linear-gradient(left, #B279F7 0%, #7FA1F8 100%);
+  background: linear-gradient(90deg, #B279F7 0%, #7FA1F8 100%);
+  border-radius: 50%;
+  -webkit-transition: border-color, background 0.3s ease-in;
+  -o-transition: border-color, background 0.3s ease-in;
+  transition: border-color, background 0.3s ease-in;
+}
+
+.pool-wrap .matrix-table td .matrix-check label::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 9px;
+  height: 9px;
+  background: #fff;
+  -webkit-transition: opacity 0.3s ease-in;
+  -o-transition: opacity 0.3s ease-in;
+  transition: opacity 0.3s ease-in;
+  border-radius: 50%;
+}
+
+.pool-wrap .matrix-table td .matrix-check input[type=radio],
+.pool-wrap .matrix-table td .matrix-check input[type=checkbox] {
+  display: none;
+}
+
+.pool-wrap .matrix-table td .matrix-check input[type=radio]:checked ~ label::after,
+.pool-wrap .matrix-table td .matrix-check input[type=checkbox]:checked ~ label::after {
+  opacity: 0;
+}
+
 .apexcharts-canvas .apexcharts-xaxis-tick {
   display: none;
 }
@@ -5238,6 +5335,9 @@ body {
   }
   .content-wrap.survey-page .pool-wrap {
     margin-top: 0px;
+  }
+  .content-wrap.survey-page .pool-wrap .question-wrap .matrix-table table {
+    table-layout: auto;
   }
   .content-wrap.survey-page .pool-wrap .thanks-wrap {
     padding-left: 10px;
